// Flashsale means a time-limited promotion that is scheduled to start and end at specific times.
// Voucher same as Flashsale, but not having scheduled routine

enum PromotionType {
  Discount
  ShipDiscount
  Bundle
  BuyXGetY
  Cashback

  @@map("type")
  @@schema("promotion")
}

enum PromotionRefType {
  ProductSpu // Product SPU, the specific product that is being promoted
  ProductSku // Product SKU, the specific SKU of the product that is being promoted
  Category // Category, the category of products that are being promoted
  Brand // Brand, the brand of products that are being promoted

  @@map("ref_type")
  @@schema("promotion")
}

model Promotion {
  id       String  @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  code     String  @unique
  owner_id String? @db.Uuid // null means system promotion

  type        PromotionType // Type of promotion
  title       String // Title of the promotion
  description String? // Description of the promotion
  is_active   Boolean // Vendor can activate/deactivate the promotion
  auto_apply  Boolean // true means the promotion is automatically applied when conditions are met, false means a code is required

  // date_started and date_ended is the scheduled time for the promotion to be active (override the schedules)
  date_started DateTime  @db.Timestamptz(3)
  date_ended   DateTime? @db.Timestamptz(3)

  date_created DateTime @default(now()) @db.Timestamptz(3)
  date_updated DateTime @default(now()) @updatedAt @db.Timestamptz(3)

  vendor    Vendor?             @relation(fields: [owner_id], references: [id], onUpdate: Cascade, onDelete: SetNull)
  discounts PromotionDiscount[]
  schedules PromotionSchedule[]
  refs      PromotionRef[]

  @@map("promotion")
  @@schema("promotion")
}

model PromotionRef {
  id           BigInt           @id @default(autoincrement())
  promotion_id String           @db.Uuid
  ref_type     PromotionRefType // Type of reference
  ref_id       String           @db.Uuid // Reference id, e.g. product id, category id

  promotion Promotion @relation(fields: [promotion_id], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@unique([promotion_id, ref_type, ref_id])
  @@map("ref")
  @@schema("promotion")
}

model PromotionSchedule {
  id           BigInt @id @default(autoincrement())
  promotion_id String @db.Uuid
  timezone     String // Timezone for the schedule, e.g., "America/New_York"
  cron_rule    String // (e.g., "0 9 * * 1" for every Monday 9AM)
  duration     Int // in minutes, e.g., 60 for 1 hour

  next_run_at DateTime? @db.Timestamptz(3)
  last_run_at DateTime? @db.Timestamptz(3)

  promotion Promotion @relation(fields: [promotion_id], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@map("schedule")
  @@schema("promotion")
}

model PromotionDiscount {
  id String @id @db.Uuid

  min_spend        BigInt // Minimum spend to apply this sale, 0 means applied immediately
  max_discount     BigInt // Maximum discount amount (fixed price), 0 means no limit
  discount_percent Float? // either discount_percent or discount_price
  discount_price   BigInt?

  promotion Promotion @relation(fields: [id], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@map("discount")
  @@schema("promotion")
}
