//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  type AccountType [not null]
  status AccountStatus [not null, default: 'Active']
  phone String [unique]
  email String [unique]
  username String [unique]
  password String
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Profile {
  id String [pk]
  gender Gender
  name String
  date_of_birth DateTime
  avatar_rs_id String [unique]
  email_verified Boolean [not null, default: false]
  phone_verified Boolean [not null, default: false]
  default_contact_id String [unique]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Customer {
  id String [pk]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Vendor {
  id String [pk]
  description String [not null, default: '']
}

Table IncomeHistory {
  id BigInt [pk, increment]
  account_id String [not null]
  type String [not null]
  income BigInt [not null]
  current_balance BigInt [not null]
  note String
  date_created DateTime [default: `now()`, not null]
}

Table Notification {
  id BigInt [pk, increment]
  account_id String [not null]
  type String [not null]
  channel String [not null]
  is_read Boolean [not null, default: false]
  content String [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
  date_sent DateTime
  date_scheduled DateTime
}

Table Contact {
  id String [pk]
  account_id String [not null]
  full_name String [not null]
  phone String [not null]
  phone_verified Boolean [not null, default: false]
  address String [not null]
  address_type AddressType [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Interaction {
  id BigInt [pk, increment]
  account_id String
  session_id String
  event_type String [not null]
  ref_type InteractionRefType [not null]
  ref_id String [not null]
  metadata Json
  user_agent String
  ip_address String
  date_created DateTime [default: `now()`, not null]
}

Table Brand {
  id String [pk]
  code String [unique, not null]
  name String [not null]
  description String [not null]
}

Table ProductCategory {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  parent_id BigInt
}

Table ProductSpu {
  id String [pk]
  slug String [unique, not null]
  account_id String [not null]
  category_id String [not null]
  brand_id String [not null]
  featured_sku_id String [unique]
  name String [not null]
  description String [not null]
  is_active Boolean [not null]
  specifications Json [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
  date_deleted DateTime
}

Table ProductSku {
  id String [pk]
  spu_id String [not null]
  price BigInt [not null]
  can_combine Boolean [not null]
  attributes Json [not null]
  package_details Json [not null]
  date_created DateTime [default: `now()`, not null]
  date_deleted DateTime
}

Table Tag {
  id String [pk]
  description String
}

Table ProductTag {
  id BigInt [pk, increment]
  spu_id String [not null]
  tag String [not null]

  indexes {
    (spu_id, tag) [unique]
  }
}

Table Comment {
  id String [pk]
  account_id String [not null]
  ref_type CommentRefType [not null]
  ref_id String [not null]
  body String [not null]
  upvote BigInt [not null, default: 0]
  downvote BigInt [not null, default: 0]
  score Float [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table SearchSync {
  id BigInt [pk, increment]
  ref_type String [not null]
  ref_id String [not null]
  is_stale_embedding Boolean [not null, default: true]
  is_stale_metadata Boolean [not null, default: true]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]

  indexes {
    (ref_type, ref_id) [unique]
  }
}

Table Resource {
  id String [pk]
  uploaded_by String
  provider String [not null]
  object_key String [not null]
  mime String [not null]
  size BigInt [not null]
  metadata Json [not null]
  checksum String
  status Status [not null, default: 'Pending']
  created_at DateTime [default: `now()`, not null]

  indexes {
    (provider, object_key) [unique]
  }
}

Table ResourceReference {
  id BigInt [pk, increment]
  rs_id String [not null]
  ref_type ResourceRefType [not null]
  ref_id String [not null]
  order Int [not null]
}

Table ServiceOption {
  id String [pk]
  category String [not null]
  name String [not null]
  description String [not null]
  provider String [not null]
  method String [not null]
  is_active Boolean [not null, default: true]
  order Int [not null]
}

Table ProductSerial {
  id String [pk]
  sku_id String [not null]
  status ProductStatus [not null, default: 'Active']
  date_created DateTime [default: `now()`, not null]
}

Table Stock {
  id BigInt [pk, increment]
  ref_type StockRefType [not null]
  ref_id String [not null]
  stock BigInt [not null]
  taken BigInt [not null, default: 0]
  serial_required Boolean [not null, default: false]
  date_created DateTime [default: `now()`, not null]

  indexes {
    (ref_id, ref_type) [unique]
  }
}

Table StockHistory {
  id BigInt [pk, increment]
  stock_id BigInt [not null]
  change BigInt [not null]
  date_created DateTime [default: `now()`, not null]
}

Table CartItem {
  id BigInt [pk, increment]
  account_id String [not null]
  sku_id String [not null]
  quantity BigInt [not null]

  indexes {
    (account_id, sku_id) [unique]
  }
}

Table Payment {
  id BigInt [pk, increment]
  account_id String [not null]
  option String [not null]
  status Status [not null, default: 'Pending']
  amount BigInt [not null]
  data Json [not null]
  date_created DateTime [default: `now()`, not null]
  date_paid DateTime
  date_expired DateTime [not null]
}

Table Order {
  id String [pk]
  customer_id String [not null]
  vendor_id String [not null]
  payment_id BigInt [unique, not null]
  shipment_id String [not null]
  confirmed_by_id String
  status Status [not null, default: 'Pending']
  address String [not null]
  product_cost BigInt [not null]
  product_discount BigInt [not null]
  ship_cost BigInt [not null]
  ship_discount BigInt [not null]
  total BigInt [not null]
  note String
  data Json [not null]
  date_created DateTime [default: `now()`, not null]
}

Table OrderItem {
  id BigInt [pk, increment]
  order_id String [not null]
  sku_id String [not null]
  sku_name String [not null]
  quantity BigInt [not null]
  unit_price BigInt [not null]
  note String
  serial_ids Json

  indexes {
    (order_id, sku_id) [unique]
  }
}

Table Refund {
  id String [pk]
  account_id String [not null]
  order_id String [not null]
  confirmed_by_id String
  shipment_id String
  method RefundMethod [not null]
  status Status [not null, default: 'Pending']
  reason String [not null]
  address String
  date_created DateTime [default: `now()`, not null]
}

Table RefundDispute {
  id String [pk]
  refund_id String [not null]
  issued_by_id String [not null]
  reason String [not null]
  status Status [not null, default: 'Pending']
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Shipment {
  id String [pk]
  option String [not null]
  tracking_code String
  status ShipmentStatus [not null, default: 'Pending']
  label_url String
  cost BigInt [not null]
  new_cost BigInt [not null]
  date_eta DateTime [not null]
  from_address String [not null]
  to_address String [not null]
  weight_grams Int [not null]
  length_cm Int [not null]
  width_cm Int [not null]
  height_cm Int [not null]
  date_created DateTime [default: `now()`, not null]
}

Table Promotion {
  id String [pk]
  code String [unique, not null]
  owner_id String
  type PromotionType [not null]
  title String [not null]
  description String
  is_active Boolean [not null]
  auto_apply Boolean [not null]
  date_started DateTime [not null]
  date_ended DateTime
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table PromotionRef {
  id BigInt [pk, increment]
  promotion_id String [not null]
  ref_type PromotionRefType [not null]
  ref_id String [not null]

  indexes {
    (promotion_id, ref_type, ref_id) [unique]
  }
}

Table PromotionSchedule {
  id BigInt [pk, increment]
  promotion_id String [not null]
  timezone String [not null]
  cron_rule String [not null]
  duration Int [not null]
  next_run_at DateTime
  last_run_at DateTime
}

Table PromotionDiscount {
  id String [pk]
  min_spend BigInt [not null]
  max_discount BigInt [not null]
  discount_percent Float
  discount_price BigInt
}

Table OutboxEvent {
  id BigInt [pk, increment]
  topic String [not null]
  data Json [not null]
  processed Boolean [not null, default: false]
  date_processed DateTime
  date_created DateTime [default: `now()`, not null]
}

Enum AccountType {
  Customer
  Vendor
}

Enum AccountStatus {
  Active
  Suspended
}

Enum Gender {
  Male
  Female
  Other
}

Enum AddressType {
  Home
  Work
}

Enum InteractionRefType {
  Product
  Category
  Brand
}

Enum CommentRefType {
  ProductSpu
  Comment
}

Enum ResourceRefType {
  ProductSpu
  ProductSku
  Brand
  Refund
  ReturnDispute
  Comment
}

Enum Status {
  Pending
  Processing
  Success
  Canceled
  Failed
}

Enum StockRefType {
  ProductSku
  Promotion
}

Enum ProductStatus {
  Active
  Inactive
  Sold
  Damaged
}

Enum RefundMethod {
  PickUp
  DropOff
}

Enum ShipmentStatus {
  Pending
  LabelCreated
  InTransit
  OutForDelivery
  Delivered
  Failed
  Cancelled
}

Enum PromotionType {
  Discount
  ShipDiscount
  Bundle
  BuyXGetY
  Cashback
}

Enum PromotionRefType {
  ProductSpu
  ProductSku
  Category
  Brand
}

Ref: Profile.default_contact_id - Contact.id [delete: Set Null]

Ref: Profile.id - Account.id [delete: Cascade]

Ref: Profile.avatar_rs_id - Resource.id [delete: Set Null]

Ref: Customer.id - Account.id [delete: Cascade]

Ref: Vendor.id - Account.id [delete: Cascade]

Ref: IncomeHistory.account_id > Vendor.id [delete: Cascade]

Ref: Notification.account_id > Account.id [delete: Cascade]

Ref: Contact.account_id > Account.id [delete: Cascade]

Ref: Interaction.account_id > Customer.id [delete: Cascade]

Ref: ProductSpu.account_id > Vendor.id [delete: Cascade]

Ref: ProductSpu.category_id > ProductCategory.id [delete: Cascade]

Ref: ProductSpu.brand_id > Brand.id [delete: Cascade]

Ref: ProductSku.spu_id > ProductSpu.id [delete: Cascade]

Ref: ProductTag.spu_id > ProductSpu.id [delete: Cascade]

Ref: ProductTag.tag > Tag.id [delete: Cascade]

Ref: Comment.account_id > Account.id [delete: Cascade]

Ref: Resource.uploaded_by > Account.id [delete: Set Null]

Ref: ResourceReference.rs_id > Resource.id [delete: Cascade]

Ref: ProductSerial.sku_id > ProductSku.id [delete: Cascade]

Ref: StockHistory.stock_id > Stock.id [delete: Cascade]

Ref: CartItem.account_id > Customer.id [delete: Cascade]

Ref: CartItem.sku_id > ProductSku.id [delete: Cascade]

Ref: Payment.account_id > Customer.id [delete: No Action]

Ref: Payment.option > ServiceOption.id [delete: No Action]

Ref: Order.customer_id > Customer.id [delete: No Action]

Ref: Order.shipment_id > Shipment.id [delete: Set Null]

Ref: Order.confirmed_by_id > Vendor.id [delete: Set Null]

Ref: Order.vendor_id > Vendor.id [delete: Set Null]

Ref: Order.payment_id - Payment.id [delete: No Action]

Ref: OrderItem.order_id > Order.id [delete: Cascade]

Ref: OrderItem.sku_id > ProductSku.id [delete: No Action]

Ref: Refund.account_id > Customer.id [delete: No Action]

Ref: Refund.order_id > Order.id [delete: No Action]

Ref: Refund.confirmed_by_id > Vendor.id [delete: Set Null]

Ref: Refund.shipment_id > Shipment.id [delete: No Action]

Ref: RefundDispute.refund_id > Refund.id [delete: No Action]

Ref: RefundDispute.issued_by_id > Vendor.id [delete: No Action]

Ref: Shipment.option > ServiceOption.id [delete: No Action]

Ref: Promotion.owner_id > Vendor.id [delete: Set Null]

Ref: PromotionRef.promotion_id > Promotion.id [delete: Cascade]

Ref: PromotionSchedule.promotion_id > Promotion.id [delete: Cascade]

Ref: PromotionDiscount.id > Promotion.id [delete: Cascade]